<resources>
    <string name="app_name">File-DropBox-Test-Application</string>
    <string name="file_pic">File pic</string>
    <string name="file_name">File name</string>
    <string name="file_url">File url</string>
    <string name="file_size">File size</string>
    <string name="file_date">File date</string>
    <string name="folder_name">Folder name</string>
    <string name="amount_of_files">Amount of files</string>
    <string name="latest_chosen_file">Latest chosen file:</string>
    <string name="choose_file">Choose file</string>
    <string name="go_back">Go back</string>
    <string name="cancel">Cancel</string>
    <string name="mail_address">Mail address</string>
    <string name="dropbox">Dropbox</string>
    <string name="following_error_occurred">Following error occurred:</string>
    <string name="error_text">Error text</string>
    <string name="info_pic">Info pic</string>
    <string name="error_pic">Error pic</string>
    <string name="directory_pic">Directory pic</string>
    <string name="go_to_this_folder">Go to this folder</string>
    <string name="email">eMail</string>
    <string name="log_in">Log in</string>
    <string name="you_are_not_logged_in">You are not logged in.</string>
    <string name="no_files">No files.</string>
</resources>
