<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_card">

    <ImageView
        android:layout_height="48dp"
        android:layout_width="0dp"
        android:id="@+id/image_error"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_action_error"
        android:contentDescription="@string/file_pic" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_name"
        android:maxWidth="200dp"
        android:text="@string/following_error_occurred"
        android:maxLines="1"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/image_error"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_message"
        android:maxWidth="100dp"
        android:text="@string/error_text"
        android:maxLines="1"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light_italic"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:layout_constraintLeft_toLeftOf="@id/text_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>