<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activity.ChooseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:layout_margin="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/constraint_layout_go_back"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?android:selectableItemBackground"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_action_arrow_left"
            android:id="@+id/image_go_back"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/go_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:id="@+id/text_go_back"
            android:maxLines="1"
            android:gravity="center"
            android:textColor="@color/secondaryColor"
            app:layout_constraintLeft_toRightOf="@id/image_go_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/mail_address"
        android:textSize="12sp"
        android:maxLines="1"
        android:layout_margin="8dp"
        android:gravity="center"
        android:id="@+id/text_mail"
        android:fontFamily="@font/roboto_light_italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/dropbox"
        android:textSize="16sp"
        android:maxLines="1"
        android:gravity="center"
        android:id="@+id/text_directory"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/constraint_layout_go_back"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/constraint_recycler"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_directory"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/recycler_view"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        app:layout_constraintBottom_toTopOf="@id/constraint_recycler"
        android:background="@color/primaryDarkColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>